--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,5 @@ Carthage
 # Note: if you ignore the Pods directory, make sure to uncomment
 # `pod install` in .travis.yml
 #
-Demo/Pods/
+#Demo/Pods/
 
