--- a/Demo/Podfile
+++ b/Demo/Podfile
@@ -1,9 +1,22 @@
-platform :ios, '8.0'
+platform :ios, '9.0'
 use_frameworks!
 
 target 'Demo' do
 
+pod 'ModelMapper', '5.0.0'
+pod 'Moya', '8.0.0-beta.2'
 pod 'Moya-ModelMapper', :path => "../"
 
 end
 
+# Hack to fix testability until cocoapods gets an update
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            if config.name == 'Debug'
+                config.build_settings['ENABLE_TESTABILITY'] = 'YES'
+                config.build_settings['SWIFT_VERSION'] = '3.0'
+            end
+        end
+    end
+end
