--- a/Moya-ModelMapper.xcodeproj/xcshareddata/xcschemes/ReactiveMoya-ModelMapper.xcscheme
+++ b/Moya-ModelMapper.xcodeproj/xcshareddata/xcschemes/ReactiveMoya-ModelMapper.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0830"
+   LastUpgradeVersion = "0930"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "73978C681F0B82F500A391D0"
+               BlueprintIdentifier = "135A803413C025EE85FBC67B"
                BuildableName = "ReactiveMoya_ModelMapper.framework"
                BlueprintName = "ReactiveMoya-ModelMapper"
                ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
@@ -26,6 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
@@ -36,6 +37,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -45,7 +47,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "73978C681F0B82F500A391D0"
+            BlueprintIdentifier = "135A803413C025EE85FBC67B"
             BuildableName = "ReactiveMoya_ModelMapper.framework"
             BlueprintName = "ReactiveMoya-ModelMapper"
             ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
@@ -60,15 +62,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "73978C681F0B82F500A391D0"
-            BuildableName = "ReactiveMoya_ModelMapper.framework"
-            BlueprintName = "ReactiveMoya-ModelMapper"
-            ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
