--- a/Moya.xcodeproj/xcshareddata/xcschemes/RxMoya-ModelMapper.xcscheme
+++ b/Moya.xcodeproj/xcshareddata/xcschemes/RxMoya-ModelMapper.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "731CF91AF49075E22DCBF8A1"
-               BuildableName = "Moya_ModelMapper.framework"
-               BlueprintName = "Moya-ModelMapper"
-               ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
+               BlueprintIdentifier = "D98A6E7D2BB5148FD112529E"
+               BuildableName = "RxMoya_ModelMapper.framework"
+               BlueprintName = "RxMoya-ModelMapper"
+               ReferencedContainer = "container:Moya.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,7 +26,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
@@ -37,7 +36,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -47,10 +45,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "731CF91AF49075E22DCBF8A1"
-            BuildableName = "Moya_ModelMapper.framework"
-            BlueprintName = "Moya-ModelMapper"
-            ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
+            BlueprintIdentifier = "D98A6E7D2BB5148FD112529E"
+            BuildableName = "RxMoya_ModelMapper.framework"
+            BlueprintName = "RxMoya-ModelMapper"
+            ReferencedContainer = "container:Moya.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
