--- a/Moya-ModelMapper.xcodeproj-backup/xcshareddata/xcschemes/RxMoya-ModelMapper.xcscheme
+++ b/Moya-ModelMapper.xcodeproj-backup/xcshareddata/xcschemes/RxMoya-ModelMapper.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CB01E6B39A00A8E944BEB061"
-               BuildableName = "Moya_ModelMapper.framework"
-               BlueprintName = "Moya-ModelMapper"
+               BlueprintIdentifier = "5C206CBAFBC7BB1C07AC3444"
+               BuildableName = "RxMoya_ModelMapper.framework"
+               BlueprintName = "RxMoya-ModelMapper"
                ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "07A9CF174BAC76BEF41F0DB6"
-               BuildableName = "Moya-ModelMapperTests.xctest"
-               BlueprintName = "Moya-ModelMapperTests"
-               ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -55,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CB01E6B39A00A8E944BEB061"
-            BuildableName = "Moya_ModelMapper.framework"
-            BlueprintName = "Moya-ModelMapper"
+            BlueprintIdentifier = "5C206CBAFBC7BB1C07AC3444"
+            BuildableName = "RxMoya_ModelMapper.framework"
+            BlueprintName = "RxMoya-ModelMapper"
             ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
