--- a/Moya-ModelMapper.xcodeproj/xcshareddata/xcschemes/RxMoya-ModelMapper.xcscheme
+++ b/Moya-ModelMapper.xcodeproj/xcshareddata/xcschemes/RxMoya-ModelMapper.xcscheme
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5C206CBAFBC7BB1C07AC3444"
+               BlueprintIdentifier = "FA69A356781D796BC6E2B7F1"
                BuildableName = "RxMoya_ModelMapper.framework"
                BlueprintName = "RxMoya-ModelMapper"
                ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "07A9CF174BAC76BEF41F0DB6"
+               BuildableName = "Moya-ModelMapperTests.xctest"
+               BlueprintName = "Moya-ModelMapperTests"
+               ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -45,7 +55,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5C206CBAFBC7BB1C07AC3444"
+            BlueprintIdentifier = "FA69A356781D796BC6E2B7F1"
             BuildableName = "RxMoya_ModelMapper.framework"
             BlueprintName = "RxMoya-ModelMapper"
             ReferencedContainer = "container:Moya-ModelMapper.xcodeproj">
