--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     environment:
       LANG: en_US.UTF-8
     macos:
-      xcode: '10.2.0'
+      xcode: 11.0.0
     steps:
       - checkout
       - restore_cache:
